# CPHTTP

./: CMakeLists.txt  READEME.md  main.cpp
CPPHTTP/: CMakeLists.txt  HTTP.cpp  HTTP.h  Socket.cpp  Socket.h  URL.cpp  URL.h  main.cpp
tst/: CMakeLists.txt  main.cpp  tester.cpp
